--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: -webkit-linear-gradient(
+    180deg,
+    #0e0d30 0%,
+    #0c1014 73.96%,
+    #14133d 100%
+  );
 }
 
 code {
